--- a/FashionNewsFeed/FashionNewsFeed/Base.lproj/Main.storyboard
+++ b/FashionNewsFeed/FashionNewsFeed/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q9C-oi-z6D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="223" y="-271"/>
+            <point key="canvasLocation" x="223" y="1105"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="ufC-wZ-h7g">
@@ -65,7 +65,7 @@
         <!--Page View Controller-->
         <scene sceneID="RZn-Oi-hpz">
             <objects>
-                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" pageSpacing="18" navigationOrientation="horizontal" spineLocation="none" id="2ig-DC-cdl" sceneMemberID="viewController">
+                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="2ig-DC-cdl" sceneMemberID="viewController">
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZIx-kN-MLq" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -77,9 +77,16 @@
             <objects>
                 <navigationController storyboardIdentifier="PageContentNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="psl-3F-axc" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0Dg-cm-oNv">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0Dg-cm-oNv" customClass="NavigationBarWithBottomStroke">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <offsetWrapper key="textShadowOffset" horizontal="0.0" vertical="0.0"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -95,7 +102,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="pageContentConroller" id="vbT-r0-ggN" customClass="PageContentViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Qwr-yC-NoG">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -115,7 +122,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="NEWS" id="DWE-YW-foL">
-                        <barButtonItem key="leftBarButtonItem" systemItem="bookmarks" id="S5A-r3-lhn"/>
+                        <barButtonItem key="leftBarButtonItem" image="MenuIcon" id="S5A-r3-lhn"/>
                     </navigationItem>
                     <connections>
                         <outlet property="barButtonMenuIcon" destination="S5A-r3-lhn" id="qxy-gt-wS7"/>
@@ -130,7 +137,7 @@
             <objects>
                 <viewController title="NewsContentContoller" id="WVd-OM-PCO" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zhR-2X-shM">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A lot of beautiful stuff goes here" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UEM-Xf-o7V">
@@ -150,6 +157,9 @@
             <point key="canvasLocation" x="1578" y="1013"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="MenuIcon" width="24" height="22"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
