content present test

--- a/FashionNewsFeed/FashionNewsFeed/Base.lproj/Main.storyboard
+++ b/FashionNewsFeed/FashionNewsFeed/Base.lproj/Main.storyboard
@@ -177,7 +177,7 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" scalesPageToFit="YES" id="aJg-wK-cia">
+                            <webView contentMode="scaleToFill" id="aJg-wK-cia">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
